Change Fix Test 1

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -309,3 +309,9 @@ a:after {
 		 -o-transition: all .1s ease-in-out;
 			transition: all .1s ease-in-out;
 }
+/* ===========================================================
+			    Font
+   =========================================================== */
+.Font1 {
+	font-size:14px ;
+}
